# passerine

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.txt  README.md  dump.txt  dumper.py  grammar.ebnf  refactoring.txt  rustfmt.toml  span.txt
.github/: FUNDING.yml
.github/workflows/: main.yml  release.yml  rust.yml
cli/: main.rs
examples/: introduction.p  introduction.pn
passerine/: Cargo.toml
passerine-aspen/: .gitignore  Cargo.toml  README.md
passerine-aspen/src/: cli.rs  main.rs  manifest.rs  new.rs  repl.rs  run.rs  status.rs
passerine-common/: Cargo.toml
passerine-common/src/: closure.rs  code.rs  data.rs  effect.rs  inject.rs  lambda.rs  lib.rs  lit.rs  module.rs  number.rs  opcode.rs  source.rs  span.rs  ty.rs
passerine-derive/: Cargo.toml
passerine-derive/src/: lib.rs
passerine-qualm/: Cargo.toml
passerine-qualm/src/: code.rs  fiber.rs  main.rs  slot.rs  stack.rs
passerine-qualm/src/heap/: mod.rs  pointer.rs  range_set.rs
passerine/proptest-regressions/compiler/: lex.txt
passerine/src/: lib.rs  main.rs
passerine/std/: kernel.pn  mod.pn
passerine/tests/: fledgling.rs
proptest-regressions/compiler/: lex.txt  read.txt
src/: lib.rs  main.rs
src/common/: captured.rs  chunk.rs  closure.rs  data.rs  ffi.rs  lambda.rs  lit.rs  local.rs  mod.rs  number.rs  opcode.rs  source.rs  span.rs  stamp.rs  ty.rs  type_.rs
src/compiler/: CLOSURES.md  PATTERNS.md  UPVALUES.md  ast.rs  cst.rs  desugar.rs  gen.rs  hoist.rs  lex.rs  lex_new.rs  lex_old.rs  lower.rs  mod.rs  new_lex.rs  new_parse.rs  parse.rs  parse_new.rs  pattern.rs  read.rs  rule.rs  sst.rs  syntax.rs  token.rs
src/construct/: CONSTRUCT.md  ast.rs  cst.rs  mod.rs  module.rs  rule.rs  rule_new.rs  scope.rs  sst.rs  st.rs  st_refactor.rs  symbol.rs  token.rs  tree.rs
src/core/: FFI.md  control.rs  effect.rs  effect_core.rs  extract.rs  ffi.rs  inject.rs  io.rs  logic.rs  math.rs  mod.rs
src/kernel/: control.rs  extract.rs  inject.rs  logic.rs  math.rs
src/pipeline/: ast.rs  bytecode.rs  mod.rs  source.rs  token.rs
src/pipes/: gen.rs  lex.rs  mod.rs  parse.rs
src/utils/: annotation.rs  compile.rs  error.rs  mod.rs  number.rs  pipes.rs  runtime.rs  span.rs
src/vm/: closure.rs  data.rs  linked.rs  local.rs  mod.rs  slot.rs  stack.rs  tag.rs  trace.rs  vm.rs
std/: main.pp  mod.pn
tests/: fledgling.rs
tests/snippets/: a_macro.pn  a_match.pn  add_numbers.pn  ambiguious.pn  bad_call.pn  bare_macro.pn  call.pn  chaining.pn  constant_macro.pn  double_capture.pn  fibonacci.pn  forever.pn  hello.pn  hoist.pn  identity.pn  integer.pn  macro_in_macro.pn  magic.pn  match.pn  milk.pn  multiple_macros.pn  neg.pn  odd_even.pn  or.pn  recursive.pn  remainder.pn  symbols.pn  syntax_call.pn  to_string.pn  tuple.pn  tuple_compose.pn  tuple_lambda.pn  tuple_order.pn  unsound_capture.pn  use-before.pn  use_before.pn
tests/snippets_anvil/: hoist.pn
(+96 files in other folders)
